@@ -1,0 +1,2 @@
+#!/bin/sh
+./src/dbus-env ./src/test-runner home-dir-on-authenticate test-gobject-greeter
