@@ -25,6 +25,8 @@ Overview of changes in lightdm 1.1.1
     * Update build system to work with automake 1.11.2
     * Run tests inside their own system D-Bus, simulating ConsoleKit and
       AccountsService
+    * Add regression test for users that have their home directory created after
+      authentication.
 
 Overview of changes in lightdm 1.1.0
 
